# rubert

./: .gitignore  .prettierignore  .prettierrc.yml  README.md  bun.lockb  package-lock.json  package.json  prettier.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
dev-dist/: sw.js
public/scramblers/: 2look-oll  2look-pll  full-oll  full-pll
solver/: Cargo.toml  LICENSE_MIT
solver/src/: error.rs  lib.rs  utils.rs
solver/src/cube/: facelet.rs  index.rs  mod.rs  moves.rs  state.rs
solver/src/solver/: mod.rs  moves.rs  pruning.rs  solver.rs  utils.rs
src/: entry-server.tsx  global.d.ts  root.css  root.tsx
src/components/: AddSolve.tsx  ColorPicker.tsx  CubeNet.tsx  DeleteSessionButton.tsx  ImportScramble.tsx  Move.tsx  Navbar.tsx  NewSessionButton.tsx  Sessions.tsx  SolveButton.tsx  navbar.module.css  navbar.tsx
src/components/ui/: button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  select.tsx  separator.tsx  sheet.tsx  steps.tsx  switch.tsx  table.tsx  toast.tsx
src/lib/: cube.ts  icons.tsx  opencv.d.ts  result.ts  scanning.ts  scramblers.ts  utils.ts
src/lib/orbit/: orbitcontrols.d.ts
src/lib/orbitcontrols/: index.js
src/lib/scramblers/: 2look-oll.ts  2look-pll.ts  full-oll.ts  full-pll.ts  index.ts
src/routes/: [...404].tsx  index.tsx  manual.tsx  scan.tsx
src/routes/solve/: [cube].tsx
src/routes/solver/: 3d.tsx  [cube].tsx  index.tsx  manual.tsx  scan.tsx  solver.module.css
src/solver/: package.json  solver.d.ts  solver.js  solver_bg.js  solver_bg.wasm  solver_bg.wasm.d.ts
