[package]
name = "solver"
version = "0.1.0"
authors = ["elijah629 <62805599+elijah629@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.64"
rand = "0.9.1"
lazy_static = "1.4.0"
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
